--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
                     </ul>
                     <ul>
                         <li>Front-End Development:</li>
-                        <li><i class="fas fa-check"></i> <a href="https://softuni.bg/certificates/details/117637/cc466fcb">HTML & CSS</a></li>
+                        <li><i class="fas fa-check"></i> <a
+                                href="https://softuni.bg/certificates/details/117637/cc466fcb">HTML & CSS</a></li>
 
                     </ul>
                     <p>Average grade: 6.00</p>
@@ -285,8 +286,9 @@
                     <h4><a href="https://udemy.com">UDEMY.COM</a></h4>
                     <ul>
                         <li></li>
-                        <li><i class="fas fa-check"></i> Data Structures & Algorithms with Python</li>
+                        <li><i class="fas fa-sync-alt"></i> SQL Bootcamp 2022: Go from Zero to Hero</li>
                         <li><i class="fas fa-sync-alt"></i> The Web developer Bootcamp 2021</li>
+                        <li><i class="fas fa-check"></i> Data Structures & Algorithms with Python</li>
 
                     </ul>
                     <h4>OTHER COURSES:</h4>
@@ -304,14 +306,27 @@
             <h4><i class="far fa-newspaper"></i>ACCOMPLISHMENTS</h4>
             <div>
                 <article>
+                    <span class="title"><a href="https://bomitev.github.io/steakhouse/"><img
+                                src="./images/project2.png" /></a></span>
+                    <h4>PROJECT: SteakHouse Chief Mustache</h4>
+                    <p>My last FrontEnd project about my favorite topic...<br>Tech stack:
+                        <i class="devicon-html5-plain-wordmark colored"></i>
+                        <i class="devicon-css3-plain-wordmark colored"></i>
+                    </p>
+                </article>
+                <article>
                     <span class="title"><a href="http://borkomitev.atwebpages.com/"><img
                                 src="./images/project1.png" /></a></span>
                     <h4>PROJECT: More than 100 natural wonders in Bulgaria</h4>
                     <p>Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest project
                         I
                         ever made. Later on I opened another chapter in my life.<br>Tech stack: <i
-                            class="fab fa-php"></i>
-                        <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i> <i class="fas fa-database"></i>
+                            class="devicon-php-plain colored"></i>
+                        <i class="devicon-html5-plain-wordmark colored"></i> <i
+                            class="devicon-css3-plain-wordmark colored"></i>
+                        <i class="devicon-mysql-plain colored"></i>
+
+
                     </p>
                 </article>
                 <article>
