--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
                     <span>2021 - Present</span>
                     <ul>
                         <li>Python Web Development:</li>
-                        <li><i class="fas fa-sync-alt"></i> Python OOP - October</li>
+                        <li><i class="fas fa-check"></i> <a
+                                href="https://softuni.bg/certificates/details/120654/953a88a3">Python OOP - October</a>
+                        </li>
                         <li><i class="fas fa-check"></i> <a
                                 href="https://softuni.bg/certificates/details/114166/20bbc9de">Python Advanced -
                                 September</a></li>
