--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@
                     <span>2021 - Present</span>
                     <ul>
                         <li>Python Web Development:</li>
+                        <li><i class="fas fa-sync-alt"></i> Python Web Framework</li>
+                        <li><i class="fas fa-sync-alt"></i> Python Web Basics</li>
                         <li><i class="fas fa-check"></i> <a
                                 href="https://softuni.bg/certificates/details/120654/953a88a3">Python OOP - October</a>
                         </li>
