--- a/index.html
+++ b/index.html
@@ -252,17 +252,16 @@
                         <li><i class="fas fa-sync-alt"></i> Python Web Framework</li>
                         <li><i class="fas fa-sync-alt"></i> Python Web Basics</li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/120654/953a88a3">Python OOP - October</a>
+                                href="https://softuni.bg/certificates/details/120654/953a88a3">Python OOP</a>
                         </li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/114166/20bbc9de">Python Advanced -
-                                September</a></li>
+                                href="https://softuni.bg/certificates/details/114166/20bbc9de">Python Advanced</a></li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/110936/36a5ba0a">Programing Fundamentals -
-                                May</a></li>
+                                href="https://softuni.bg/certificates/details/110936/36a5ba0a">Programing
+                                Fundamentals</a></li>
                         <li><i class="fas fa-check"></i> <a
                                 href="https://softuni.bg/certificates/details/104890/51b96cb8">Programing Basics with
-                                Python - March</a></li>
+                                Python</a></li>
                     </ul>
                     <ul>
                         <li>Front-End Development:</li>
