--- a/index.html
+++ b/index.html
@@ -127,6 +127,26 @@
         <section class="experience" id="experience">
             <h4><i class="fas fa-briefcase"></i> EXPERIENCE</h4>
 
+            <article>
+                <nav class="dropdown">
+                    <input type="checkbox" id="touch6" class="touch">
+                    <label for="touch6">
+                        <h4>Junior Software Developer</h4>
+                        <p>DXC Technology / <i class="fas fa-home"></i> Remote, Bulgaria<span>Jan 2022 -
+                                Present</span></p>
+                    </label>
+                    <ul class="slide">
+
+                        <li><i class="fas fa-angle-double-right"></i> Specify, code, test and implement basic programs
+                        </li>
+                        <li><i class="fas fa-angle-double-right"></i> Assist in resolving basic production support
+                            problems</li>
+                        <li><i class="fas fa-angle-double-right"></i> Assist in completing unit testing</li>
+                        <li><i class="fas fa-angle-double-right"></i> Participate in quality assurance activities such
+                            as code reviews.</li>
+                    </ul>
+                </nav>
+            </article>
 
             <article>
                 <nav class="dropdown">
@@ -134,7 +154,7 @@
                     <label for="touch5">
                         <h4>Cold Processing Technologist</h4>
                         <p>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021 -
-                                Present</span></p>
+                                Dec 2021</span></p>
                     </label>
                     <ul class="slide">
                         <li><i class="fas fa-angle-double-right"></i> Develops and implements routing and operational
