--- a/index.html
+++ b/index.html
@@ -344,8 +344,7 @@
                                 src="./images/project1.png" /></a></span>
                     <h4>PROJECT: More than 100 natural wonders in Bulgaria</h4>
                     <p>Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest project
-                        I
-                        ever made. Later on I opened another chapter in my life.<br>Tech stack: <i
+                        I've ever made. Later on I opened another chapter in my life.<br>Tech stack: <i
                             class="devicon-php-plain colored"></i>
                         <i class="devicon-html5-plain-wordmark colored"></i> <i
                             class="devicon-css3-plain-wordmark colored"></i>
