--- a/index.html
+++ b/index.html
@@ -126,139 +126,157 @@
 
         <section class="experience" id="experience">
             <h4><i class="fas fa-briefcase"></i> EXPERIENCE</h4>
+            <div id="left">
+                <article>
+                    <nav class="dropdown">
+                        <input type="checkbox" id="touch6" class="touch">
+                        <label for="touch6">
+                            <h4>Junior Software Developer</h4>
+                            <p>DXC Technology / <i class="fas fa-home"></i> Remote, Bulgaria<span>Jan 2022 -
+                                    Present</span></p>
+                        </label>
+                        <ul class="slide">
 
-            <article>
-                <nav class="dropdown">
-                    <input type="checkbox" id="touch6" class="touch">
-                    <label for="touch6">
-                        <h4>Junior Software Developer</h4>
-                        <p>DXC Technology / <i class="fas fa-home"></i> Remote, Bulgaria<span>Jan 2022 -
-                                Present</span></p>
-                    </label>
-                    <ul class="slide">
+                            <li><i class="fas fa-angle-double-right"></i> Specify, code, test and implement basic
+                                programs
+                            </li>
+                            <li><i class="fas fa-angle-double-right"></i> Assist in resolving basic production support
+                                problems</li>
+                            <li><i class="fas fa-angle-double-right"></i> Assist in completing unit testing</li>
+                            <li><i class="fas fa-angle-double-right"></i> Participate in quality assurance activities
+                                such
+                                as code reviews.</li>
+                        </ul>
+                    </nav>
+                </article>
 
-                        <li><i class="fas fa-angle-double-right"></i> Specify, code, test and implement basic programs
-                        </li>
-                        <li><i class="fas fa-angle-double-right"></i> Assist in resolving basic production support
-                            problems</li>
-                        <li><i class="fas fa-angle-double-right"></i> Assist in completing unit testing</li>
-                        <li><i class="fas fa-angle-double-right"></i> Participate in quality assurance activities such
-                            as code reviews.</li>
-                    </ul>
-                </nav>
-            </article>
 
-            <article>
-                <nav class="dropdown">
-                    <input type="checkbox" id="touch5" class="touch">
-                    <label for="touch5">
-                        <h4>Cold Processing Technologist</h4>
-                        <p>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021 -
-                                Dec 2021</span></p>
-                    </label>
-                    <ul class="slide">
-                        <li><i class="fas fa-angle-double-right"></i> Develops and implements routing and operational
-                            technologies of
-                            production processes</li>
-                        <li><i class="fas fa-angle-double-right"></i> Sets the operating modes and machine time.</li>
-                        <li><i class="fas fa-angle-double-right"></i> Develops standards for consumption of raw
-                            materials and
-                            equipment.</li>
-                        <li><i class="fas fa-angle-double-right"></i> Works with the ERP system for enterprise
-                            management</li>
-                    </ul>
-                </nav>
-            </article>
 
-            <article>
-                <nav class="dropdown">
-                    <input type="checkbox" id="touch4" class="touch">
-                    <label for="touch4">
-                        <h4>Marine Mechanical Engineer</h4>
-                        <p>"Norwegian Cruise Line” Holding / <i class="fas fa-home"></i> Miami, Florida<span>Sep 2019
-                                - Feb 2021</span></p>
-                    </label>
-                    <ul class="slide">
-                        <li><i class="fas fa-angle-double-right"></i> Watch keeping engineer for dry dock repair.</li>
-                        <li><i class="fas fa-angle-double-right"></i> Installing new Ballast water treatment system and
-                            scrubber
-                            system for reducing CO2 emissions and cleaning waste water from
-                            vessel.</li>
-                        <li><i class="fas fa-angle-double-right"></i> Testing systems and evaluate the results</li>
-                    </ul>
-                </nav>
-            </article>
+                <article>
+                    <nav class="dropdown">
+                        <input type="checkbox" id="touch4" class="touch">
+                        <label for="touch4">
+                            <h4>Marine Mechanical Engineer</h4>
+                            <p>"Norwegian Cruise Line” Holding / <i class="fas fa-home"></i> Miami, Florida<span>Sep
+                                    2019
+                                    - Feb 2021</span></p>
+                        </label>
+                        <ul class="slide">
+                            <li><i class="fas fa-angle-double-right"></i> Watch keeping engineer for dry dock repair.
+                            </li>
+                            <li><i class="fas fa-angle-double-right"></i> Installing new Ballast water treatment system
+                                and
+                                scrubber
+                                system for reducing CO2 emissions and cleaning waste water from
+                                vessel.</li>
+                            <li><i class="fas fa-angle-double-right"></i> Testing systems and evaluate the results</li>
+                        </ul>
+                    </nav>
+                </article>
+                <article>
+                    <nav class="dropdown">
+                        <input type="checkbox" id="touch2" class="touch">
+                        <label for="touch2">
+                            <h4>Security Systems and Video surveillance Engineer</h4>
+                            <p>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
+                                    2017</span></p>
+                        </label>
+                        <ul class="slide">
+                            <li><i class="fas fa-angle-double-right"></i> Networks and systems for communication and
+                                data
+                                exchange.</li>
+                            <li><i class="fas fa-angle-double-right"></i> All kinds of technical security systems in the
+                                sites of centralized
+                                guarding – alarm systems, video surveillance, fire alarm and
+                                access control.</li>
+                        </ul>
+                    </nav>
+                </article>
+            </div>
+            <div id="right">
+                <article>
+                    <nav class="dropdown">
+                        <input type="checkbox" id="touch5" class="touch">
+                        <label for="touch5">
+                            <h4>Cold Processing Technologist</h4>
+                            <p>VSK Kentavar - IZ Dinamika / <i class="fas fa-home"></i> Dryanovo, Bulgaria<span>Mar 2021
+                                    -
+                                    Dec 2021</span></p>
+                        </label>
+                        <ul class="slide">
+                            <li><i class="fas fa-angle-double-right"></i> Develops and implements routing and
+                                operational
+                                technologies of
+                                production processes</li>
+                            <li><i class="fas fa-angle-double-right"></i> Sets the operating modes and machine time.
+                            </li>
+                            <li><i class="fas fa-angle-double-right"></i> Develops standards for consumption of raw
+                                materials and
+                                equipment.</li>
+                            <li><i class="fas fa-angle-double-right"></i> Works with the ERP system for enterprise
+                                management</li>
+                        </ul>
+                    </nav>
+                </article>
+                <article>
+                    <nav class="dropdown">
+                        <input type="checkbox" id="touch3" class="touch">
+                        <label for="touch3">
+                            <h4>Junior Marine Mechanical Engineer</h4>
+                            <p>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2017
+                                    -
+                                    Aug 2019</span></p>
+                        </label>
+                        <ul class="slide">
+                            <li><i class="fas fa-angle-double-right"></i> In charge with the sounding tanks of the
+                                sludge,
+                                fuel oil, diesel oil,
+                                lube oil and dirty oil, checking and keeping the maintenance of the
+                                Main Engines, Auxiliary Engines, Boilers, Centrifugal Separators,
+                                Air Compressors and Pumps</li>
+                            <li><i class="fas fa-angle-double-right"></i> Operating the boilers-Start/Stop, cleaning the
+                                flame burner,
+                                cleaning the filters of the pumps, operating the centrifugal
+                                separators.</li>
+                        </ul>
+                    </nav>
+                </article>
 
-            <article>
-                <nav class="dropdown">
-                    <input type="checkbox" id="touch3" class="touch">
-                    <label for="touch3">
-                        <h4>Junior Marine Mechanical Engineer</h4>
-                        <p>STAMCO Ship Management Co. Ltd / <i class="fas fa-home"></i> Athens, Greece<span>Jun 2017 -
-                                Aug 2019</span></p>
-                    </label>
-                    <ul class="slide">
-                        <li><i class="fas fa-angle-double-right"></i> In charge with the sounding tanks of the sludge,
-                            fuel oil, diesel oil,
-                            lube oil and dirty oil, checking and keeping the maintenance of the
-                            Main Engines, Auxiliary Engines, Boilers, Centrifugal Separators,
-                            Air Compressors and Pumps</li>
-                        <li><i class="fas fa-angle-double-right"></i> Operating the boilers-Start/Stop, cleaning the
-                            flame burner,
-                            cleaning the filters of the pumps, operating the centrifugal
-                            separators.</li>
-                    </ul>
-                </nav>
-            </article>
 
-            <article>
-                <nav class="dropdown">
-                    <input type="checkbox" id="touch2" class="touch">
-                    <label for="touch2">
-                        <h4>Security Systems and Video surveillance Engineer</h4>
-                        <p>Sot 161 EOOD / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Dec 2016 - Jun
-                                2017</span></p>
-                    </label>
-                    <ul class="slide">
-                        <li><i class="fas fa-angle-double-right"></i> Networks and systems for communication and data
-                            exchange.</li>
-                        <li><i class="fas fa-angle-double-right"></i> All kinds of technical security systems in the
-                            sites of centralized
-                            guarding – alarm systems, video surveillance, fire alarm and
-                            access control.</li>
-                    </ul>
-                </nav>
-            </article>
 
-            <article>
-                <nav class="dropdown">
-                    <input type="checkbox" id="touch1" class="touch">
-                    <label for="touch1">
-                        <h4>Technical support</h4>
-                        <p>"Istar-Link" ISP in Silistra / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Jul 2013
-                                - Mar 2016</span></p>
-                    </label>
+                <article>
+                    <nav class="dropdown">
+                        <input type="checkbox" id="touch1" class="touch">
+                        <label for="touch1">
+                            <h4>Technical support</h4>
+                            <p>"Istar-Link" ISP in Silistra / <i class="fas fa-home"></i> Silistra, Bulgaria<span>Jul
+                                    2013
+                                    - Mar 2016</span></p>
+                        </label>
 
-                    <ul class="slide">
-                        <li><i class="fas fa-angle-double-right"></i> Deliver service and support to end-users using
-                            phone software via
-                            the Internet</li>
-                        <li><i class="fas fa-angle-double-right"></i> Gathering customer’s information and determine the
-                            issue by
-                            evaluating and analysing the symptoms</li>
-                        <li><i class="fas fa-angle-double-right"></i> Diagnose and resolve technical hardware and
-                            software issues
-                            involving internet connectivity</li>
-                        <li><i class="fas fa-angle-double-right"></i> Following standard processes and procedures</li>
-                        <li><i class="fas fa-angle-double-right"></i> Following up and make scheduled call backs to
-                            customers where
-                            necessary</li>
-                        <li><i class="fas fa-angle-double-right"></i> Have to be informed of all new improvements,
-                            changes and
-                            updates</li>
-                    </ul>
-                </nav>
-            </article>
+                        <ul class="slide">
+                            <li><i class="fas fa-angle-double-right"></i> Deliver service and support to end-users using
+                                phone software via
+                                the Internet</li>
+                            <li><i class="fas fa-angle-double-right"></i> Gathering customer’s information and determine
+                                the
+                                issue by
+                                evaluating and analysing the symptoms</li>
+                            <li><i class="fas fa-angle-double-right"></i> Diagnose and resolve technical hardware and
+                                software issues
+                                involving internet connectivity</li>
+                            <li><i class="fas fa-angle-double-right"></i> Following standard processes and procedures
+                            </li>
+                            <li><i class="fas fa-angle-double-right"></i> Following up and make scheduled call backs to
+                                customers where
+                                necessary</li>
+                            <li><i class="fas fa-angle-double-right"></i> Have to be informed of all new improvements,
+                                changes and
+                                updates</li>
+                        </ul>
+                    </nav>
+                </article>
+            </div>
         </section>
 
         <section class="education" id="education">
