--- a/index.html
+++ b/index.html
@@ -327,11 +327,9 @@
                     <h4><a href="https://udemy.com">UDEMY.COM</a></h4>
                     <ul>
                         <li></li>
-                        <li><i class="fas fa-sync-alt"></i> SQL Bootcamp 2022: Go from Zero to Hero</li>
-                        <li><i class="fas fa-sync-alt"></i> The Web developer Bootcamp 2021</li>
-                        <li><i class="fas fa-check"></i> <a
-                                href="https://www.udemy.com/certificate/UC-ff960c16-bb50-4983-8454-cca73c9aa82b/">Data
-                                Structures & Algorithms with Python</a></li>
+                        <li><i class="fas fa-check"></i> SQL Bootcamp 2022: Go from Zero to Hero</li>
+                        <li><i class="fas fa-check"></i> The Web developer Bootcamp 2021</li>
+                        <li><i class="fas fa-check"></i> Data Structures & Algorithms with Python</li>
 
                     </ul>
                     <h4>OTHER COURSES:</h4>
