--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <input type="checkbox" id="touch6" class="touch">
                         <label for="touch6">
                             <h4>Junior Software Developer</h4>
-                            <p>DXC Technology / <i class="fas fa-home"></i> Remote, Bulgaria<span>Jan 2022 -
+                            <p>DXC Technology / <i class="fas fa-home"></i> Remote<span>Jan 2022 -
                                     Present</span></p>
                         </label>
                         <ul class="slide">
