--- a/index.html
+++ b/index.html
@@ -383,11 +383,8 @@
 
         <section class="contact" id="contact">
             <h4><i class="far fa-envelope-open"></i>CONTACT ME</h4>
-            <form action="#">
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                <label for="email">Email</label>
+            <form action="https://formspree.io/f/mayknpyy" method="POST">
+                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Your email..">
 
                 <label for="subject">Message</label>
