--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <article class="left">
-            <svg viewBox="0 0 700 700">
+		<a href="#"><svg viewBox="0 0 700 700">
                 <path class="stroke"
                     d="m 239.79 58.64 c 53.34 -63.57 148.46 -71.89 212.03 -18.55 c 30.52 25.61 49.3 61.69 53.01 100.9 c 0 0.03 0.03 0.05 0.05 0.04 c 39.44 -3.16 78.41 9.19 108.99 35.04 c 63.5 53.66 70.67 149.07 17.23 212.75 l -231.46 275.85 l -34.47 -28.92 c -19.04 -15.97 -21.53 -44.36 -5.55 -63.4 l 202.82 -241.71 c 21.35 -25.45 18.99 -63.65 -6.14 -85.38 c -25.54 -22.09 -64.29 -18.93 -85.93 6.86 l -347.71 414.38 c -15.98 19.04 -44.36 21.52 -63.4 5.55 l 0 0 c -19.04 -15.98 -21.52 -44.36 -5.55 -63.4 l 347.09 -413.64 c 21.35 -25.45 18.99 -63.65 -6.14 -85.38 c -25.54 -22.09 -64.29 -18.93 -85.93 6.86 l -203.44 242.46 c -15.98 19.04 -44.36 21.52 -63.4 5.55 l -34.47 -28.93 l 232.37 -276.93 z" />
             </svg><svg viewBox="0 0 204.94 29.5">
@@ -70,7 +70,7 @@
                 0.65 -4 a 9.15 9.15 0 0 1 1.78 -3.2 a 8.08 8.08 0 0 1 2.79 -2 a 9.25 9.25 0 0 1 7.06 0 a 8.08 8.08 0 0 1
                 2.82 2 a 9.17 9.17 0 0 1 1.82 3.12 a 11.92 11.92 0 0 1 0.62 4.05 z m -3.5 0 a 8 8 0 0 0 -1.42 -5 a 5 5 0
                 0 0 -7.74 0 a 8 8 0 0 0 -1.42 5 a 8 8 0 0 0 1.42 5 a 5 5 0 0 0 7.74 0 a 8 8 0 0 0 1.42 -5 z" />
-            </svg>
+            </svg></a>
         </article>
         <article class="right">
             <button class="nav-bar-toggle-button" type="button"></button>
