--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <article class="intro-text">
                 <h1>Hello!</h1>
                 <h3>I'm Boris <span>Mitev</span></h3>
-                <h2>I enjoy creating and developing tech websites</h2>
+                <h2>I enjoy creating and developing websites</h2>
             </article>
             <article class="intro-image">
                 <img src="./images/avatar.png" />
