--- a/index.html
+++ b/index.html
@@ -384,15 +384,9 @@
         <section class="contact" id="contact">
             <h4><i class="far fa-envelope-open"></i>CONTACT ME</h4>
             <form action="https://formspree.io/f/mayknpyy" method="POST">
-				<label for="full-name">Full Name</label>
-				<input type="text" name="name" id="full-name" placeholder="First and Last name..." required>
-				
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your email.." required>
-
-                <label for="message">Message</label>
-                <textarea id="message" name="message" placeholder="Write something.." style="height:10vw"></textarea>
-
+				<input type="text" name="name" id="full-name" placeholder="Your name" required>
+                <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+                <textarea id="message" name="message" placeholder="Type your Message here..." style="height:10vw"></textarea>
                 <input type="submit" value="Send">
             </form>
         </section>
