--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </nav>
                 </div>
                 <div class="social">
-                    <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a href="https://github.com/BoMitev"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/boris-mitev-87a7b4202/"><i class="fab fa-linkedin-in"></i></a><a href="https://github.com/BoMitev"><i class="fab fa-github"></i></a><a href="docs/resume.pdf"><i class="fa-regular fa-file-pdf"></i></a>
                 </div>
             </article>
         </header>
