links open in new tab

--- a/index.html
+++ b/index.html
@@ -258,32 +258,32 @@
             <h4><i class="fas fa-user-graduate"></i>EDUCATION</h4>
             <article>
                 <div>
-                    <h4>SOFTWARE UNIVERSITY ( <a href="https://softuni.bg">SOFTUNI.BG</a> )</h4>
+                    <h4>SOFTWARE UNIVERSITY ( <a href="https://softuni.bg" target="_blank">SOFTUNI.BG</a> )</h4>
                     <span>2021 - Present</span>
                     <ul>
                         <li>Python Web Development:</li>
                         <li><i class="fas fa-sync-alt"></i> Python Web Framework</li>
                         <li><i class="fas fa-sync-alt"></i> Python Web Basics</li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/120654/953a88a3">Python OOP</a></li>
+                                href="https://softuni.bg/certificates/details/120654/953a88a3" target="_blank">Python OOP</a></li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/114166/20bbc9de">Python Advanced</a></li>
+                                href="https://softuni.bg/certificates/details/114166/20bbc9de" target="_blank">Python Advanced</a></li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/110936/36a5ba0a">Programing
+                                href="https://softuni.bg/certificates/details/110936/36a5ba0a" target="_blank">Programing
                                 Fundamentals</a></li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/104890/51b96cb8">Programing Basics with
+                                href="https://softuni.bg/certificates/details/104890/51b96cb8" target="_blank">Programing Basics with
                                 Python</a></li>
                     </ul>
                     <ul>
                         <li>Front-End Development:</li>
                         <li><i class="fas fa-check"></i> <a
-                                href="https://softuni.bg/certificates/details/117637/cc466fcb">HTML & CSS</a></li>
+                                href="https://softuni.bg/certificates/details/117637/cc466fcb" target="_blank">HTML & CSS</a></li>
                     </ul>
                     <p>Average grade: 6.00</p>
                 </div>
                 <div>
-                    <a href="https://www1.tu-varna.bg/tu-varna/">
+                    <a href="https://www1.tu-varna.bg/tu-varna/" target="_blank">
                         <h4>TECHNICAL UNIVERSITY OF VARNA</h4>
                     </a>
                     <span>2013 - 2019</span>
@@ -297,7 +297,7 @@
                         <li><i class="fas fa-check"></i> State English exam - 5.50</li>
                     </ul>
                     <p>Average grade: 5.00</p>
-                    <a href="https://pgmt-komarov.eu/">
+                    <a href="https://pgmt-komarov.eu/" target="_blank">
                         <h4>School of Mechanical Engineering - Silistra</h4>
                     </a>
                     <span>2008 - 2013</span>
@@ -308,7 +308,7 @@
                     <p>Average grade: 5.70</p>
                 </div>
                 <div>
-                    <h4><a href="https://udemy.com">UDEMY.COM</a></h4>
+                    <h4><a href="https://udemy.com" target="_blank">UDEMY.COM</a></h4>
                     <ul>
                         <li></li>
                         <li><i class="fas fa-check"></i> SQL Bootcamp 2022: Go from Zero to Hero</li>
@@ -328,7 +328,7 @@
             <div>
                 <article>
                     <span class="title">
-                        <a href="https://github.com/BoMitev/YouTubeDownloader"><img src="./images/project3.png" /></a>
+                        <a href="https://github.com/BoMitev/YouTubeDownloader" target="_blank"><img src="./images/project3.png" /></a>
                     </span>
                     <h4>PROJECT: YouTube Downloader</h4>
                     <p>Download videos and audio from youtube with a free youtube video/audio downloader.
@@ -337,7 +337,7 @@
                 </article>
                 <article>
                     <span class="title">
-                        <a href="https://bomitev.github.io/steakhouse/"><img src="./images/project2.png" /></a>
+                        <a href="https://bomitev.github.io/steakhouse/" target="_blank"><img src="./images/project2.png" /></a>
                     </span>
                     <h4>PROJECT: SteakHouse Chief Mustache</h4>
                     <p>
@@ -350,7 +350,7 @@
                 </article>
                 <article>
                     <span class="title">
-                        <a href="http://borkomitev.atwebpages.com/"><img src="./images/project1.png" /></a>
+                        <a href="http://borkomitev.atwebpages.com/" target="_blank"><img src="./images/project1.png" /></a>
                     </span>
                     <h4>PROJECT: More than 100 natural wonders in Bulgaria</h4>
                     <p>
@@ -366,7 +366,7 @@
                 </article>
                 <article>
                     <span class="title">
-                        <a href="https://www.portal-silistra.eu/news/5581"><img src="./images/webloz.jpg" /></a>
+                        <a href="https://www.portal-silistra.eu/news/5581" target="_blank"><img src="./images/webloz.jpg" /></a>
                     </span>
                     <h4>National Web development competition WebLoz'12</h4>
                     <p>With "More than 100 natural wonders in Bulgaria" project we took 8<sup>th</sup> place out of 20
