Adding new project

--- a/index.html
+++ b/index.html
@@ -328,6 +328,15 @@
             <div>
                 <article>
                     <span class="title">
+                        <a href="https://github.com/BoMitev/gile-guest-house" target="_blank"><img src="./images/gile_project.png" /></a>
+                    </span>
+                    <h4>PROJECT: GILE Guest House</h4>
+                    <p>Django project for friend of mine Guest House in my town Veliko Tarnovo.
+                    <p>Technology: <i class="devicon-django-plain colored"></i><i class="devicon-python-plain"></i><i class="devicon-html5-plain colored"></i><i class="devicon-css3-plain colored"></i><i class="devicon-javascript-plain colored"></i><i class="devicon-bootstrap-plain colored"></i><i class="devicon-sqlite-plain colored"></i></p>
+                    </p>
+                </article>
+                <article>
+                    <span class="title">
                         <a href="https://github.com/BoMitev/YouTubeDownloader" target="_blank"><img src="./images/project3.png" /></a>
                     </span>
                     <h4>PROJECT: YouTube Downloader</h4>
@@ -341,7 +350,7 @@
                     </span>
                     <h4>PROJECT: SteakHouse Chief Mustache</h4>
                     <p>
-                        My last FrontEnd project about my favorite topic...<br />
+                        My FrontEnd project about my favorite topic...<br />
                     <p>Tech stack:
                         <i class="devicon-html5-plain-wordmark colored"></i>
                         <i class="devicon-css3-plain-wordmark colored"></i>
