--- a/index.html
+++ b/index.html
@@ -332,7 +332,15 @@
                     </span>
                     <h4>PROJECT: GILE Guest House</h4>
                     <p>Django project for friend of mine Guest House in my town Veliko Tarnovo.
-                    <p>Technology: <i class="devicon-django-plain colored"></i><i class="devicon-python-plain"></i><i class="devicon-html5-plain colored"></i><i class="devicon-css3-plain colored"></i><i class="devicon-javascript-plain colored"></i><i class="devicon-bootstrap-plain colored"></i><i class="devicon-sqlite-plain colored"></i></p>
+                    <p>
+                        <i class="devicon-django-plain colored"></i> 
+                        <i class="devicon-python-plain"></i> 
+                        <i class="devicon-html5-plain colored"></i> 
+                        <i class="devicon-css3-plain colored"></i> 
+                        <i class="devicon-javascript-plain colored"></i> 
+                        <i class="devicon-bootstrap-plain colored"></i> 
+                        <i class="devicon-sqlite-plain colored"></i>
+                    </p>
                     </p>
                 </article>
                 <article>
@@ -351,7 +359,7 @@
                     <h4>PROJECT: SteakHouse Chief Mustache</h4>
                     <p>
                         My FrontEnd project about my favorite topic...<br />
-                    <p>Tech stack:
+                    <p>
                         <i class="devicon-html5-plain-wordmark colored"></i>
                         <i class="devicon-css3-plain-wordmark colored"></i>
                     </p>
@@ -366,9 +374,9 @@
                         Project which I made when I was 10<sup>th</sup> grade at middle school. Maybe the biggest
                         project I've ever made. Later on I opened another chapter in my life.<br />
                     <p>
-                        Tech stack: <i class="devicon-php-plain colored"></i> <i
-                            class="devicon-html5-plain-wordmark colored"></i> <i
-                            class="devicon-css3-plain-wordmark colored"></i>
+                        <i class="devicon-php-plain colored"></i> 
+                        <i class="devicon-html5-plain-wordmark colored"></i> 
+                        <i class="devicon-css3-plain-wordmark colored"></i> 
                         <i class="devicon-mysql-plain colored"></i>
                     </p>
                     </p>
