--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <div>
                 <article>
                     <span class="title">
-                        <a href="https://github.com/BoMitev/gile-guest-house" target="_blank"><img src="./images/gile_project.png" /></a>
+                        <a href="https://gile.house/home/" target="_blank"><img src="./images/gile_project.png" /></a>
                     </span>
                     <h4>PROJECT: GILE Guest House</h4>
                     <p>Django project for friend of mine Guest House in my town Veliko Tarnovo.
