--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         <a href="https://gile.house/home/" target="_blank"><img src="./images/gile_project.png" /></a>
                     </span>
                     <h4>PROJECT: GILE Guest House</h4>
-                    <p>Django project for friend of mine Guest House in my town Veliko Tarnovo.
+                    <p>Django project for my friend's guest house in my town Veliko Tarnovo.
                     <p>
                         <i class="devicon-django-plain colored"></i> 
                         <i class="devicon-python-plain"></i> 
