--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@
                     <h4>OTHER COURSES:</h4>
                     <ul>
                         <li></li>
+                        <li>
+                            <i class="fas fa-check"></i>
+                            <a href="https://certificate.algoexpert.io/BlockchainExpert%20Certificate%20BCE-f0a8b860f5" >Certicate of Completion on blockchain assessments on AlgoExpert.io</a>
+                        </li>
                         <li><i class="fas fa-check"></i> Marlins English Language Test - 90/100%</li>
                     </ul>
                 </div>
